--- a/startseite.html
+++ b/startseite.html
@@ -10,7 +10,7 @@
         <a>Übersicht</a>
       </div>
       <div>
-        <a>Ipmressum</a>
+        <a>Impressum</a>
         <a>Kontakt</a>
       </div>
     </header>
