--- a/startseite.html
+++ b/startseite.html
@@ -3,6 +3,7 @@
    <head>
        <meta charset="utf-8">
        <title>Get the order</title>
+       <link rel="stylesheet" href="css/style.css">
    </head>
   <body>
     <header>
