--- a/startseite.html
+++ b/startseite.html
@@ -8,11 +8,11 @@
   <body>
     <header>
       <div>
-        <a>Übersicht</a>
+        <a class="headText">Übersicht</a>
       </div>
       <div>
-        <a>Impressum</a>
-        <a>Kontakt</a>
+        <a class="headText">Impressum</a>
+        <a class="headText">Kontakt</a>
       </div>
     </header>
   </body>
