--- a/startseite.html
+++ b/startseite.html
@@ -8,6 +8,7 @@
   <body>
     <header>
       <div>
+        <img src="img/logo.png" alt="logo">
         <a class="headerText">Übersicht</a>
       </div>
       <div>
