--- a/startseite.html
+++ b/startseite.html
@@ -9,11 +9,11 @@
     <header>
       <div>
         <img src="img/logo.png" alt="logo">
-        <a class="headerText">Übersicht</a>
+        <a class="headerText">ÜBERSICHTt</a>
       </div>
       <div>
-        <a class="headerText">Impressum</a>
-        <a class="headerText">Kontakt</a>
+        <a class="headerText">IMPRESSUM</a>
+        <a class="headerText">KONTAKT</a>
       </div>
     </header>
   </body>
