--- a/startseite.html
+++ b/startseite.html
@@ -11,7 +11,7 @@
         <img src="img/logo.png" alt="logo">
         <a class="headerText">ÜBERSICHTt</a>
       </div>
-      <div>
+      <div class="headerLeftS">
         <a class="headerText">IMPRESSUM</a>
         <a class="headerText">KONTAKT</a>
       </div>
