--- a/startseite.html
+++ b/startseite.html
@@ -9,9 +9,9 @@
     <header>
       <div>
         <img src="img/logo.png" alt="logo">
-        <a class="headerText">ÜBERSICHTt</a>
+        <a class="headerText">ÜBERSICHTT</a>
       </div>
-      <div class="headerLeftS">
+      <div class="headerLeft">
         <a class="headerText">IMPRESSUM</a>
         <a class="headerText">KONTAKT</a>
       </div>
