--- a/startseite.html
+++ b/startseite.html
@@ -9,7 +9,7 @@
     <header>
       <div>
         <img src="img/logo.png" alt="logo">
-        <a class="headerTextActive">STARTSEITE</a>
+        <a class="headerTextHier">STARTSEITE</a>
       </div>
       <div class="headerLeft">
         <a class="headerText">IMPRESSUM</a>
