--- a/startseite.html
+++ b/startseite.html
@@ -8,8 +8,8 @@
   <body>
     <header>
       <div>
-        <img src="img/logo.png" alt="logo">
-        <a class="headerTextHier">STARTSEITE</a>
+        <img src="img/logo.png" alt="logo" class="logo">
+        <a class="headerTextHier headerText">STARTSEITE</a>
       </div>
       <div class="headerLeft">
         <a class="headerText">IMPRESSUM</a>
