--- a/startseite.html
+++ b/startseite.html
@@ -11,7 +11,7 @@
         <img src="img/logo.png" alt="logo" class="logo">
         <a class="headerTextHier headerText">STARTSEITE</a>
       </div>
-      <div class="headerLeft">
+      <div class="headerRight">
         <a class="headerText">IMPRESSUM</a>
         <a class="headerText">KONTAKT</a>
       </div>
