--- a/startseite.html
+++ b/startseite.html
@@ -12,7 +12,7 @@
         <a class="headerTextHier headerText">STARTSEITE</a>
       </div>
       <div class="headerRight">
-        <a class="headerText">IMPRESSUM</a>
+        <a class="headerText headerRightTextAbstand">IMPRESSUM</a>
         <a class="headerText">KONTAKT</a>
       </div>
     </header>
