--- a/startseite.html
+++ b/startseite.html
@@ -13,7 +13,7 @@
       </div>
       <div class="headerRight">
         <a class="headerText headerRightTextAbstand">IMPRESSUM</a>
-        <a class="headerText">KONTAKT</a>
+        <a class="headerText headerRightTextAbstand">KONTAKT</a>
       </div>
     </header>
   <h1>Get the order!</h1>
