--- a/startseite.html
+++ b/startseite.html
@@ -12,8 +12,8 @@
         <a class="headerTextHier headerText">STARTSEITE</a>
       </div>
       <div class="headerRight">
-        <a class="headerText headerRightTextAbstand">IMPRESSUM</a>
-        <a class="headerText headerRightTextAbstand">KONTAKT</a>
+        <a class="headerText">IMPRESSUM </a>
+        <a class="headerText">KONTAKT</a>
       </div>
     </header>
   <h1>Get the order!</h1>
