--- a/startseite.html
+++ b/startseite.html
@@ -6,21 +6,21 @@
        <link rel="stylesheet" href="css/style.css">
    </head>
   <body>
-    <header>
-      <div>
-        <img src="img/logo.png" alt="logo" class="logo">
-        <a class="headerTextHier headerText">STARTSEITE</a>
+    <h1>Get the order!</h1>
+
+    <div class="container">
+      <div class="box">
+        <img alt="bild1">
+        <a href="html/buecher.html">Bücher</a>
       </div>
-      <div class="headerRight">
-        <a class="headerText headerRightTextAbstand">IMPRESSUM</a>
-        <a class="headerText headerRightTextAbstand">KONTAKT</a>
+      <div class="box">
+        <img alt="bild2">
+        <a href="html/animes.html">Animes und Mangas</a>
       </div>
-    </header>
-  <h1>Get the order!</h1>
-  Was geht ab!
-  Yo, 
-  Eleonora!
-  SUPER SCHLECHT!
-  Ah
+      <div class="box">
+        <img alt="bild3">
+        <a href="html/filme.html">Filme und Serien</a>
+      </div>
+    </div>
   </body>
 </html>
