--- a/startseite.html
+++ b/startseite.html
@@ -8,18 +8,24 @@
   <body>
     <h1>Get the order!</h1>
 
-    <div class="container">
+    <div id="container">
       <div class="box">
-        <img alt="bild1">
-        <a href="html/buecher.html">Bücher</a>
+        <fieldset>
+          <img alt="bild1">
+          <a href="html/buecher.html">Bücher</a>
+        </fieldset>
       </div>
       <div class="box">
-        <img alt="bild2">
-        <a href="html/animes.html">Animes und Mangas</a>
+        <fieldset>
+          <img alt="bild2">
+          <a href="html/animes.html">Animes und Mangas</a>
+        </fieldset>
       </div>
       <div class="box">
-        <img alt="bild3">
-        <a href="html/filme.html">Filme und Serien</a>
+        <fieldset>
+          <img alt="bild3">
+          <a href="html/filme.html">Animes und Mangas</a>
+        </fieldset>
       </div>
     </div>
   </body>
