--- a/html/filme.html
+++ b/html/filme.html
@@ -9,7 +9,7 @@
     <header>
         <div>
           <img src="img/logo.png" alt="logo" class="logo">
-          <a class="headerText">STARTSEITE</a>
+          <a href="../startseite.html" class="headerText">STARTSEITE</a>
         </div>
         <div class="headerRight">
           <a class="headerText headerRightTextAbstand">IMPRESSUM</a>
