--- a/startseite.html
+++ b/startseite.html
@@ -19,7 +19,7 @@
       </fieldset>
       <fieldset>
         <img alt="bild3">
-        <a href="html/filme.html">Animes und Mangas</a>
+        <a href="html/filme.html">Filme</a>
       </fieldset>
     </div>
   </body>
