--- a/startseite.html
+++ b/startseite.html
@@ -7,6 +7,25 @@
    </head>
   <body>
     <h1>Get the order!</h1>
+    <div>
+      <div>
+        <a class="headerTextHier">Get the Order</a>
+        <a> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
+        <a class="headerTextHier">Büchern</a>
+        <a>, </a>
+        <a class="headerTextHier">Filmen</a>
+        <a>, </a>
+        <a class="headerTextHier">Serien</a>
+        <a>, </a>
+        <a class="headerTextHier">Mangas</a>
+        <a> und </a>
+        <a class="headerTextHier">Animes</a>
+        <a>.</a>
+      </div>
+      <a>Unsere kuratierte Sammlung bietet detaillierte Anleitungen und Empfehlungen, damit du jedes Werk in der perfekten Abfolge erleben kannst.</a>
+      <a>Verpasse nie wieder einen entscheidenden Moment oder eine wichtige Handlung, indem du die Reihenfolge falsch wählst.</a>
+      <a>Tauche ein in die Welt der Geschichten und erlebe sie so, wie sie erzählt werden sollten</a>
+    </div>
     <br>
     <div id="container">
       <fieldset>
