--- a/startseite.html
+++ b/startseite.html
@@ -7,7 +7,7 @@
    </head>
   <body>
     <h1>Get the order!</h1>
-    <div>
+    <div class="middle">
       <div>
         <a class="headerTextHier">Get the Order</a>
         <a> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
