--- a/startseite.html
+++ b/startseite.html
@@ -22,9 +22,9 @@
         <a class="headerTextHier">Animes</a>
         <a>.</a>
       </div>
-      <a>Unsere kuratierte Sammlung bietet detaillierte Anleitungen und Empfehlungen, damit du jedes Werk in der perfekten Abfolge erleben kannst.</a>
-      <a>Verpasse nie wieder einen entscheidenden Moment oder eine wichtige Handlung, indem du die Reihenfolge falsch wählst.</a>
-      <a>Tauche ein in die Welt der Geschichten und erlebe sie so, wie sie erzählt werden sollten</a>
+      <a class="whiteText">Unsere kuratierte Sammlung bietet detaillierte Anleitungen und Empfehlungen, damit du jedes Werk in der perfekten Abfolge erleben kannst.</a>
+      <a class="whiteText">Verpasse nie wieder einen entscheidenden Moment oder eine wichtige Handlung, indem du die Reihenfolge falsch wählst.</a>
+      <a class="whiteText">Tauche ein in die Welt der Geschichten und erlebe sie so, wie sie erzählt werden sollten</a>
     </div>
     <br>
     <div id="container">
