--- a/startseite.html
+++ b/startseite.html
@@ -10,7 +10,7 @@
     <div class="middle">
       <div>
         <a class="headerTextHier">Get the Order</a>
-        <a> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
+        <a class="whiteText"> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
         <a class="headerTextHier">Büchern</a>
         <a>, </a>
         <a class="headerTextHier">Filmen</a>
