--- a/startseite.html
+++ b/startseite.html
@@ -18,7 +18,7 @@
         <a class="headerTextHier">Serien</a>
         <a>, </a>
         <a class="headerTextHier">Mangas</a>
-        <a> und </a>
+        <a class="whiteText"> und </a>
         <a class="headerTextHier">Animes</a>
         <a>.</a>
       </div>
