--- a/startseite.html
+++ b/startseite.html
@@ -20,7 +20,7 @@
         <a class="headerTextHier">Mangas</a>
         <a class="whiteText"> und </a>
         <a class="headerTextHier">Animes</a>
-        <a>.</a>
+        <a class="whiteText">.</a>
       </div>
       <a class="whiteText">Unsere kuratierte Sammlung bietet detaillierte Anleitungen und Empfehlungen, damit du jedes Werk in der perfekten Abfolge erleben kannst.</a>
       <a class="whiteText">Verpasse nie wieder einen entscheidenden Moment oder eine wichtige Handlung, indem du die Reihenfolge falsch wählst.</a>
