--- a/startseite.html
+++ b/startseite.html
@@ -12,11 +12,11 @@
         <a class="headerTextHier">Get the Order</a>
         <a class="whiteText"> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
         <a class="headerTextHier">Büchern</a>
-        <a>, </a>
+        <a class="whiteText">, </a>
         <a class="headerTextHier">Filmen</a>
-        <a>, </a>
+        <a class="whiteText">, </a>
         <a class="headerTextHier">Serien</a>
-        <a>, </a>
+        <a class="whiteText">, </a>
         <a class="headerTextHier">Mangas</a>
         <a class="whiteText"> und </a>
         <a class="headerTextHier">Animes</a>
