--- a/startseite.html
+++ b/startseite.html
@@ -8,18 +8,20 @@
   <body>
     <h1>Get the order!</h1>
     <div class="middle">
-      <a class="headerTextHier">Get the Order</a>
-      <a class="whiteText"> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
-      <a class="headerTextHier">Büchern</a>
-      <a class="whiteText">, </a>
-      <a class="headerTextHier">Filmen</a>
-      <a class="whiteText">, </a>
-      <a class="headerTextHier">Serien</a>
-      <a class="whiteText">, </a>
-      <a class="headerTextHier">Mangas</a>
-      <a class="whiteText"> und </a>
-      <a class="headerTextHier">Animes</a>
-      <a class="whiteText">.</a>
+      <div>
+        <a class="headerTextHier">Get the Order</a>
+        <a class="whiteText"> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
+        <a class="headerTextHier">Büchern</a>
+        <a class="whiteText">, </a>
+        <a class="headerTextHier">Filmen</a>
+        <a class="whiteText">, </a>
+        <a class="headerTextHier">Serien</a>
+        <a class="whiteText">, </a>
+        <a class="headerTextHier">Mangas</a>
+        <a class="whiteText"> und </a>
+        <a class="headerTextHier">Animes</a>
+        <a class="whiteText">.</a>
+      </div>
       <a class="whiteText">Unsere kuratierte Sammlung bietet detaillierte Anleitungen und Empfehlungen, damit du jedes Werk in der perfekten Abfolge erleben kannst.</a>
       <a class="whiteText">Verpasse nie wieder einen entscheidenden Moment oder eine wichtige Handlung, indem du die Reihenfolge falsch wählst.</a>
       <a class="whiteText">Tauche ein in die Welt der Geschichten und erlebe sie so, wie sie erzählt werden sollten</a>
