--- a/startseite.html
+++ b/startseite.html
@@ -18,6 +18,8 @@
         <a class="headerTextHier">Serien</a>
         <a class="whiteText">, </a>
         <a class="headerTextHier">Mangas</a>
+        <a class="whiteText">, </a>
+        <a class="headerTextHier">Spiele</a>
         <a class="whiteText"> und </a>
         <a class="headerTextHier">Animes</a>
         <a class="whiteText">.</a>
