--- a/startseite.html
+++ b/startseite.html
@@ -13,7 +13,7 @@
         <a class="whiteText"> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
         <a class="headerTextHier">Büchern</a>
         <a class="whiteText">, </a>
-        <a class="headerTextHier">Filme</a>
+        <a class="headerTextHier">Filmen</a>
         <a class="whiteText">, </a>
         <a class="headerTextHier">Serien</a>
         <a class="whiteText">, </a>
