--- a/startseite.html
+++ b/startseite.html
@@ -19,7 +19,7 @@
         <a class="whiteText">, </a>
         <a class="headerTextHier">Mangas</a>
         <a class="whiteText">, </a>
-        <a class="headerTextHier">Spiele</a>
+        <a class="headerTextHier">Videospielen</a>
         <a class="whiteText"> und </a>
         <a class="headerTextHier">Animes</a>
         <a class="whiteText">.</a>
