--- a/startseite.html
+++ b/startseite.html
@@ -5,8 +5,8 @@
        <title>Get the order</title>
        <link rel="stylesheet" href="css/style.css">
    </head>
-  <body
-/
+  <body>
+
     <h1>Get the order!</h1>
     <div class="middle">
       <div>
