--- a/html/filme.html
+++ b/html/filme.html
@@ -59,25 +59,28 @@ Captain America: Brave New World (voraussichtlicher Kinostart Februar 2025
       </div>
     </header>
     <div>
-      <h2>Filme</h2>
-      <h3>MCU in chonologischer Reihenfolge:</h3>
-      Hallo
+      <h3>Filme</h3>
+      <h4>MCU in chonologischer Reihenfolge:</h4>
+      <h5>Phase 1:</h5>
       <ul>
-        <li>Phase 1:</li>
         <li>Iron Man</li>
         <li>Der unglaubliche Hulk</li>
         <li>Iron Man 2</li>
         <li>Thor</li>
         <li>Captain America: The First Avenger</li>
         <li>Marvel's The Avengers</li>
-        <li>Phase 2:</li>
+      </ul>
+      <h5>Phase 2:</h5>
+      <ul>
         <li>Iron Man 3</li>
         <li>Thor: The Dark Kingdom</li>
         <li>The Return of the First Avenger</li>
         <li>Guardians of the Galaxy</li>
         <li>Avengers: Age of Ultron</li>
         <li>Ant-Man</li>
-        <li>Phase 3:</li>
+      </ul>
+      <h5>Phase 3:</h5>
+      <ul>
         <li>The First Avenger: Civil War</li>
         <li>Doctor Strange</li>
         <li>Guardians of the Galaxy Vol. 2</li>
@@ -89,7 +92,9 @@ Captain America: Brave New World (voraussichtlicher Kinostart Februar 2025
         <li>Captain Marvel</li>
         <li>Avengers: Endgame</li>
         <li>Spider-Man: Far From Home</li>
-        <li>Phase 4:</li>
+      </ul>
+      <h5>Phase 4:</h5>
+      <ul>
         <li>Black Widow</li>
         <li>Shang-Chi and the Legend of the Ten Rings</li>
         <li>The Eternals</li>
