--- a/html/filme.html
+++ b/html/filme.html
@@ -58,7 +58,7 @@ Captain America: Brave New World (voraussichtlicher Kinostart Februar 2025
         <a class="headerText headerRightTextAbstand">KONTAKT</a>
       </div>
     </header>
-    <div>
+    <div class="whiteText">
       <h3>Filme</h3>
       <h4>MCU in chonologischer Reihenfolge:</h4>
       <h5>Phase 1:</h5>
