--- a/html/filme.html
+++ b/html/filme.html
@@ -23,54 +23,56 @@
     <div class="whiteText">
       <h3>Filme</h3>
       <h4 id="MCU">MCU in chonologischer Reihenfolge:</h4>
-      <h5>Phase 1:</h5>
-      <ul>
-        <li>Iron Man</li>
-        <li>Der unglaubliche Hulk</li>
-        <li>Iron Man 2</li>
-        <li>Thor</li>
-        <li>Captain America: The First Avenger</li>
-        <li>Marvel's The Avengers</li>
-      </ul>
-      <h5>Phase 2:</h5>
-      <ul>
-        <li>Iron Man 3</li>
-        <li>Thor: The Dark Kingdom</li>
-        <li>The Return of the First Avenger</li>
-        <li>Guardians of the Galaxy</li>
-        <li>Avengers: Age of Ultron</li>
-        <li>Ant-Man</li>
-      </ul>
-      <h5>Phase 3:</h5>
-      <ul>
-        <li>The First Avenger: Civil War</li>
-        <li>Doctor Strange</li>
-        <li>Guardians of the Galaxy Vol. 2</li>
-        <li>Spider-Man: Homecoming</li>
-        <li>Thor: Tag der Entscheidung</li>
-        <li>Black Panther</li>
-        <li>Avengers: Infinity War</li>
-        <li>Ant-Man and the Wasp</li>
-        <li>Captain Marvel</li>
-        <li>Avengers: Endgame</li>
-        <li>Spider-Man: Far From Home</li>
-      </ul>
-      <h5>Phase 4:</h5>
-      <ul>
-        <li>Black Widow</li>
-        <li>Shang-Chi and the Legend of the Ten Rings</li>
-        <li>The Eternals</li>
-        <li>Spider-Man: No Way Home</li>
-        <li>Doctor Strange in the Multiverse of Madness</li>
-        <li>Thor: Love and Thunder</li>
-        <li>Black Panther: Wakanda Forever</li>
-        <li>Phase 5:</li>
-        <li>Ant-Man and the Wasp: Quantumania</li>
-        <li>Guardians of the Galaxy Vol. 3</li>
-        <li>The Marvels</li>
-        <li>Deadpool 3 (voraussichtlicher Kinostart im Juli 2024)</li>
-        <li>Captain America: Brave New World (voraussichtlicher Kinostart Februar 2025)</li>
-      </ul>
+      <div class="marginleft">
+        <h5>Phase 1:</h5>
+        <ul>
+          <li>Iron Man</li>
+          <li>Der unglaubliche Hulk</li>
+          <li>Iron Man 2</li>
+          <li>Thor</li>
+          <li>Captain America: The First Avenger</li>
+          <li>Marvel's The Avengers</li>
+        </ul>
+        <h5>Phase 2:</h5>
+        <ul>
+          <li>Iron Man 3</li>
+          <li>Thor: The Dark Kingdom</li>
+          <li>The Return of the First Avenger</li>
+          <li>Guardians of the Galaxy</li>
+          <li>Avengers: Age of Ultron</li>
+          <li>Ant-Man</li>
+        </ul>
+        <h5>Phase 3:</h5>
+        <ul>
+          <li>The First Avenger: Civil War</li>
+          <li>Doctor Strange</li>
+          <li>Guardians of the Galaxy Vol. 2</li>
+          <li>Spider-Man: Homecoming</li>
+          <li>Thor: Tag der Entscheidung</li>
+          <li>Black Panther</li>
+          <li>Avengers: Infinity War</li>
+          <li>Ant-Man and the Wasp</li>
+          <li>Captain Marvel</li>
+          <li>Avengers: Endgame</li>
+          <li>Spider-Man: Far From Home</li>
+        </ul>
+        <h5>Phase 4:</h5>
+        <ul>
+          <li>Black Widow</li>
+          <li>Shang-Chi and the Legend of the Ten Rings</li>
+          <li>The Eternals</li>
+          <li>Spider-Man: No Way Home</li>
+          <li>Doctor Strange in the Multiverse of Madness</li>
+          <li>Thor: Love and Thunder</li>
+          <li>Black Panther: Wakanda Forever</li>
+          <li>Phase 5:</li>
+          <li>Ant-Man and the Wasp: Quantumania</li>
+          <li>Guardians of the Galaxy Vol. 3</li>
+          <li>The Marvels</li>
+          <li>Deadpool 3 (voraussichtlicher Kinostart im Juli 2024)</li>
+          <li>Captain America: Brave New World (voraussichtlicher Kinostart Februar 2025)</li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
