--- a/html/filme.html
+++ b/html/filme.html
@@ -18,7 +18,7 @@
     </header>
     <h3 class="whiteText">Inhaltsangabe</h3>
     <ul>
-      <li><a class="whiteText" href="https://glan51.github.io/get_the_order/html/filme.html/#MCU">MCU</a></li>
+      <li><a class="whiteText" href="#MCU">MCU</a></li>
     </ul>
     <div class="whiteText">
       <h3>Filme</h3>
