--- a/html/filme.html
+++ b/html/filme.html
@@ -17,8 +17,8 @@
       </div>
     </header>
     <h3 class="whiteText">Inhaltsangabe</h3>
-    <ul>
-      <li><a class="whiteText" href="#MCU">MCU</a></li>
+    <ul class="whiteText">
+      <li><a href="#MCU">MCU</a></li>
     </ul>
     <div class="whiteText">
       <h3>Filme</h3>
