--- a/html/filme.html
+++ b/html/filme.html
@@ -18,7 +18,7 @@
     </header>
     <h3 class="whiteText">Inhaltsangabe</h3>
     <ul class="whiteText">
-      <li><a href="#MCU" class="link">MCU</a></li>
+      <li><a href="#MCU" class="whiteText">MCU</a></li>
     </ul>
     <div class="whiteText">
       <h3>Filme</h3>
