--- a/startseite.html
+++ b/startseite.html
@@ -30,7 +30,7 @@
       <a class="whiteText">Tauche ein in die Welt der Geschichten und erlebe sie so, wie sie erzählt werden sollten</a>
     </div>
     <br>
-    <div id="container mainbox">
+    <div id="container">
       <fieldset>
         <img alt="bild1">
         <a href="html/buecher.html">Bücher</a>
