--- a/html/filme.html
+++ b/html/filme.html
@@ -23,7 +23,7 @@
     <div class="whiteText">
       <h3>Filme</h3>
       <h4 id="MCU">MCU in chonologischer Reihenfolge:</h4>
-      <div class="displayOrder" style="visibility: hidden;">
+      <div class="displayOrder">
         <h5>Phase 1:</h5>
         <ul>
           <li>Iron Man</li>
