--- a/html/impressum.html
+++ b/html/impressum.html
@@ -2,10 +2,12 @@
 <html>
    <head>
        <meta charset="utf-8">
-       <title>Unbekanntes Dokument</title>
+       <title>Impressum</title>
    </head>
   <body>
 
+    <h1>Impressum</h1>
 
+    <p>Das Impressum.</p>
   </body>
 </html>
