--- a/startseite.html
+++ b/startseite.html
@@ -12,11 +12,11 @@
       <div>
         <a class="headerTextHier">Get the Order</a>
         <a class="whiteText"> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
-        <a class="headerTextHier">Büchern</a>
+        <a href="html/buecher.html" class="headerTextHier">Büchern</a>
         <a class="whiteText">, </a>
-        <a class="headerTextHier">Filmen</a>
+        <a href="html/filme.html" class="headerTextHier">Filmen</a>
         <a class="whiteText">, </a>
-        <a class="headerTextHier">Serien</a>
+        <a href="" class="headerTextHier">Serien</a>
         <a class="whiteText">, </a>
         <a class="headerTextHier">Mangas</a>
         <a class="whiteText">, </a>
