--- a/startseite.html
+++ b/startseite.html
@@ -16,13 +16,13 @@
         <a class="whiteText">, </a>
         <a href="html/filme.html" class="headerTextHier">Filmen</a>
         <a class="whiteText">, </a>
-        <a href="" class="headerTextHier">Serien</a>
+        <a href="html/filme.html" class="headerTextHier">Serien</a>
         <a class="whiteText">, </a>
-        <a class="headerTextHier">Mangas</a>
+        <a href="html/animes.html" class="headerTextHier">Mangas</a>
         <a class="whiteText">, </a>
         <a class="headerTextHier">Videospielen</a>
         <a class="whiteText"> und </a>
-        <a class="headerTextHier">Animes</a>
+        <a href="html/animes.html" class="headerTextHier">Animes</a>
         <a class="whiteText">.</a>
       </div>
       <a class="whiteText">Unsere kuratierte Sammlung bietet detaillierte Anleitungen und Empfehlungen, damit du jedes Werk in der perfekten Abfolge erleben kannst.</a>
