--- a/startseite.html
+++ b/startseite.html
@@ -44,5 +44,8 @@
         <a href="html/filme.html">Filme</a>
       </fieldset>
     </div>
+    <footer>
+      Hallo
+    </footer>
   </body>
 </html>
