--- a/html/filme.html
+++ b/html/filme.html
@@ -12,7 +12,7 @@
         <a href="../startseite.html" class="headerText">STARTSEITE</a>
       </div>
       <div class="headerRight">
-        <a class="headerText headerRightTextAbstand">IMPRESSUM</a>
+        <a href="impressum.html" class="headerText headerRightTextAbstand">IMPRESSUM</a>
         <a class="headerText headerRightTextAbstand">KONTAKT</a>
       </div>
     </header>
