--- a/html/impressum.html
+++ b/html/impressum.html
@@ -3,8 +3,19 @@
    <head>
        <meta charset="utf-8">
        <title>Impressum</title>
+       <link rel="stylesheet" href="../css/style.css">
    </head>
   <body>
+    <header>
+      <div>
+        <img src="img/logo.png" alt="logo" class="logo">
+        <a href="../startseite.html" class="headerText">STARTSEITE</a>
+      </div>
+      <div class="headerRight">
+        <a class="headerText headerRightTextAbstand">IMPRESSUM</a>
+        <a class="headerText headerRightTextAbstand">KONTAKT</a>
+      </div>
+    </header>
 
     <h1>Impressum</h1>
 
