--- a/html/animes.html
+++ b/html/animes.html
@@ -18,11 +18,11 @@
     </header>
       <h3 class="whiteText">Inhaltsangabe</h3>
     <ul class="whiteText">
-      <li><a href="#MCU" class="whiteText">MCU</a></li>
+      <li><a href="#Fate" class="whiteText">Fate</a></li>
     </ul>
     <div class="whiteText">
       <h3>Filme</h3>
-      <h4 id="MCU">MCU in chonologischer Reihenfolge:</h4>
+      <h4 id="Fate">Fate in chonologischer Reihenfolge:</h4>
       <div class="displayOrder">
         <h5>Phase 1:</h5>
         <ul>
