--- a/html/animes.html
+++ b/html/animes.html
@@ -24,53 +24,33 @@
       <h3>Filme</h3>
       <h4 id="Fate">Fate in chonologischer Reihenfolge:</h4>
       <div class="displayOrder">
-        <h5>Phase 1:</h5>
+        <h5>Fate/stay night:</h5>
         <ul>
-          <li>Iron Man</li>
-          <li>Der unglaubliche Hulk</li>
-          <li>Iron Man 2</li>
-          <li>Thor</li>
-          <li>Captain America: The First Avenger</li>
-          <li>Marvel's The Avengers</li>
+          <li>Fate/stay night (2006)</li>
+          <li>Fate/stay night: Unlimited Blade Works (2014-2015)</li>
+          <li>Fate/stay night [Heaven's Feel] I. presage flower</li>
+          <li>Fate/stay night [Heaven's Feel] II. lost butterfly</li>
+          <li>Fate/stay night [Heaven's Feel] I. spring song</li>
+          <li>Fate/Zero</li>
         </ul>
-        <h5>Phase 2:</h5>
+        <h5>Fate Spinoffs:</h5>
         <ul>
-          <li>Iron Man 3</li>
-          <li>Thor: The Dark Kingdom</li>
-          <li>The Return of the First Avenger</li>
-          <li>Guardians of the Galaxy</li>
-          <li>Avengers: Age of Ultron</li>
-          <li>Ant-Man</li>
+          <li>Today's Menu for the Emiya Family</li>
+          <li>Lord El-Melloi II Case Files</li>
+          <li>Fate/Prototype</li>
+          <li>Fate/strange Fake: Whispers of Dawn</li>
+          <li>Fate/Apocrypha</li>
+          <li>Fate/EXTRA Last Encore</li>
+          <li>Fate/kaleid liner PRISMA ILLYA</li>
+          <li>Carnival Phantasm</li>
         </ul>
-        <h5>Phase 3:</h5>
+        <h5>Fate/Grand Order:</h5>
         <ul>
-          <li>The First Avenger: Civil War</li>
-          <li>Doctor Strange</li>
-          <li>Guardians of the Galaxy Vol. 2</li>
-          <li>Spider-Man: Homecoming</li>
-          <li>Thor: Tag der Entscheidung</li>
-          <li>Black Panther</li>
-          <li>Avengers: Infinity War</li>
-          <li>Ant-Man and the Wasp</li>
-          <li>Captain Marvel</li>
-          <li>Avengers: Endgame</li>
-          <li>Spider-Man: Far From Home</li>
-        </ul>
-        <h5>Phase 4:</h5>
-        <ul>
-          <li>Black Widow</li>
-          <li>Shang-Chi and the Legend of the Ten Rings</li>
-          <li>The Eternals</li>
-          <li>Spider-Man: No Way Home</li>
-          <li>Doctor Strange in the Multiverse of Madness</li>
-          <li>Thor: Love and Thunder</li>
-          <li>Black Panther: Wakanda Forever</li>
-          <li>Phase 5:</li>
-          <li>Ant-Man and the Wasp: Quantumania</li>
-          <li>Guardians of the Galaxy Vol. 3</li>
-          <li>The Marvels</li>
-          <li>Deadpool 3 (voraussichtlicher Kinostart im Juli 2024)</li>
-          <li>Captain America: Brave New World (voraussichtlicher Kinostart Februar 2025)</li>
+          <li>Fate/Grand Order: First Order</li>
+          <li>Fate/Grand Order: Camelot - Wandering; Agateram</li>
+          <li>Fate/Grand Order: Camelot - Paladin; Agateram</li>
+          <li>Fate/Grand Order Absolute Demonic Front: Babylonia</li>
+          <li>Fate/Grand Order Final Singularity - Grand Temple of Time: Solomon</li>
         </ul>
       </div>
     </div>
