--- a/startseite.html
+++ b/startseite.html
@@ -41,7 +41,7 @@
       </fieldset>
     </div>
     <footer>
-      <a class="whiteText">Hallo!</a>
+      <a class="whiteText">Hallo! Was geht ab?</a>
     </footer>
   </body>
 </html>
