--- a/startseite.html
+++ b/startseite.html
@@ -6,7 +6,6 @@
        <link rel="stylesheet" href="css/style.css">
    </head>
   <body>
-
     <h1>Get the order!</h1>
     <div class="middle">
       <div>
@@ -29,7 +28,7 @@
     <div id="container">
       <fieldset>
         <img alt="bild1">
-        <a href="html/buecher.html">Bücher</a>
+        <a href="html/videospiele.html">Videospiele</Video></Video></a>
       </fieldset>
       <fieldset>
         <img alt="bild2">
