--- a/html/impressum.html
+++ b/html/impressum.html
@@ -12,7 +12,7 @@
         <a href="../startseite.html" class="headerText">STARTSEITE</a>
       </div>
       <div class="headerRight">
-        <a href="impressum.html" class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
+        <a class="headerText headerRightTextAbstand">IMPRESSUM und KONTAKT</a>
       </div>
     </header>
 
