--- a/html/impressum.html
+++ b/html/impressum.html
@@ -18,7 +18,7 @@
 
     <h1>Impressum</h1>
     <p>Es war einmal ein großer Filmfan namens Alex, der voller Vorfreude eine berühmte Filmreihe anschauen wollte. Doch in seiner Begeisterung übersah er die richtige Reihenfolge und begann mitten in der Serie. Die spannende Handlung verwirrte ihn, und wichtige Wendepunkte machten keinen Sinn. Der Spaß war dahin, und die Enttäuschung groß.</p>
-    <p>Sein Freund Ben sah Alex' Frust und beschloss, eine Website zu erstellen, die dieses Problem für alle Filmfans löst. Diese Website bietet klare Anleitungen zur richtigen Reihenfolge von Filmreihen, damit niemand wie Alex den Spaß an den Geschichten verliert.</p>
+    <a>Sein Freund Ben sah Alex' Frust und beschloss, eine Website zu erstellen, die dieses Problem für alle Filmfans löst. Diese Website bietet klare Anleitungen zur richtigen Reihenfolge von Filmreihen, damit niemand wie Alex den Spaß an den Geschichten verliert.</a>
     <p>Diese Seite ist Bens Geschenk an alle Filmliebhaber, um sicherzustellen, dass jeder das beste Filmerlebnis genießt.</p>
     <p>Firma:</p>
     <p>Ben's Movie Guide GmbH</p>
