--- a/startseite.html
+++ b/startseite.html
@@ -28,7 +28,7 @@
     <div id="container">
       <fieldset>
         <img alt="Pokemon Arena Bild" src="https://www.pokemon.com/static-assets/content-assets/cms2/img/watch-pokemon-tv/seasons/season15/season15_ep23_ss01.jpg">
-        <a href="html/videospiele.html">Videospiele</Video></Video></a>
+        <a href="html/videospiele.html">Videospiele</a>
       </fieldset>
       <fieldset>
         <img alt="bild2">
