--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -17,43 +17,42 @@
     </header>
     <h3 class="whiteText">Inhaltsangabe</h3>
     <ul class="whiteText">
-      <li><a href="#AC" class="whiteText">Assassins Creed</a></li>
+      <li><a href="#ACRel" class="whiteText">Assassins Creed</a></li>
+      <li><a href="#ACChr" class="whiteText">Assassins Creed</a></li>
     </ul>
     <div class="whiteText">
       <h3>Videospiele</h3>
-      <h4 id="AC">Fate in chonologischer Reihenfolge:</h4>
+      <h4 id="AC">Assasins Creed in chonologischer Reihenfolge:</h4>
       <div class="displayOrder">
-        <h5>Fate/stay night:</h5>
+        <h5>"Desmond Miles" Era</h5>
         <ul>
-          <li>Fate/stay night (2006)</li>
-          <li>Fate/stay night: Unlimited Blade Works (2014-2015)</li>
-          <li>Fate/stay night [Heaven's Feel] I. presage flower</li>
-          <li>Fate/stay night [Heaven's Feel] II. lost butterfly</li>
-          <li>Fate/stay night [Heaven's Feel] I. spring song</li>
-          <li>Fate/Zero</li>
+          <li>Assassin’s Creed (2007)</li>
+          <li>Assassin’s Creed II (2009)</li>
+          <li>Assassin’s Creed: Brotherhood (2010)</li>
+          <li>Assassin’s Creed: Revelations (2011)</li>
+          <li>Assassin’s Creed III (2012)</li>
         </ul>
-        <h5>Fate Spinoffs:</h5>
+        <h5>“Noob” Era</h5>
         <ul>
-          <li>Today's Menu for the Emiya Family</li>
-          <li>Lord El-Melloi II Case Files</li>
-          <li>Fate/Prototype</li>
-          <li>Fate/strange Fake: Whispers of Dawn</li>
-          <li>Fate/Apocrypha</li>
-          <li>Fate/EXTRA Last Encore</li>
-          <li>Fate/kaleid liner PRISMA ILLYA</li>
-          <li>Carnival Phantasm</li>
+          <li>Assassin’s Creed IV: Black Flag (2013)</li>
         </ul>
-        <h5>Fate/Grand Order:</h5>
+        <h5>“Numbskull” Era</h5>
         <ul>
-          <li>Fate/Grand Order: First Order</li>
-          <li>Fate/Grand Order: Camelot - Wandering; Agateram</li>
-          <li>Fate/Grand Order: Camelot - Paladin; Agateram</li>
-          <li>Fate/Grand Order Absolute Demonic Front: Babylonia</li>
-          <li>Fate/Grand Order Final Singularity - Grand Temple of Time: Solomon</li>
+          <li>Assassin’s Creed Rogue (2014)</li>
+        </ul>
+        <h5>“The Initiate” Era</h5>
+        <ul>
+          <li>Assassin’s Creed Unity (2014)</li>
+          <li>Assassin’s Creed Syndicate (2015)</li>
+        </ul>
+        <h5>Layla Hassan / Basim Ibn Ishaq Era</h5>
+        <ul>
+          <li>Assassin’s Creed Origins (2017)</li>
+          <li>Assassin’s Creed Odyssey (2018)</li>
+          <li>Assassin’s Creed Valhalla (2020)</li>
+          <li>Assassin’s Creed Mirage (2023)</li>
         </ul>
       </div>
     </div>
-  </body>
-</html>
   </body>
 </html>
