--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -22,7 +22,42 @@
     </ul>
     <div class="whiteText">
       <h3>Videospiele</h3>
-      <h4 id="AC">Assasins Creed in chonologischer Reihenfolge:</h4>
+      <h4 id="ACRel">Assassin's Creed in veröffentlichter Reihenfolge:</h4>
+      <div class="displayOrder">
+        <h5>"Desmond Miles" Era</h5>
+        <ul>
+          <li>Assassin’s Creed (2007)</li>
+          <li>Assassin’s Creed II (2009)</li>
+          <li>Assassin’s Creed: Brotherhood (2010)</li>
+          <li>Assassin’s Creed: Revelations (2011)</li>
+          <li>Assassin’s Creed III/ Liberation (2012)</li>
+        </ul>
+        <h5>“Noob” Era</h5>
+        <ul>
+          <li>Assassin’s Creed IV: Black Flag/ Freedom Cry (2013)</li>
+        </ul>
+        <h5>“Numbskull” Era</h5>
+        <ul>
+          <li>Assassin’s Creed Rogue (2014)</li>
+        </ul>
+        <h5>“The Initiate” Era</h5>
+        <ul>
+          <li>Assassin’s Creed Unity (2014)</li>
+          <li>Assassin’s Creed Syndicate (2015)</li>
+        </ul>
+        <h5>Layla Hassan / Basim Ibn Ishaq Era</h5>
+        <ul>
+          <li>Assassin’s Creed Origins (2017)</li>
+          <li>Assassin’s Creed Odyssey (2018)</li>
+          <li>Assassin’s Creed Valhalla (2020)</li>
+          <li>Assassin’s Creed Mirage (2023)</li>
+        </ul>
+        <h5>VR</h5>
+        <ul>
+          <li>Assassin's Creed Nexus VR (2023)</li>
+        </ul>
+      </div>
+      <h4 id="ACChr">Assassin's Creed in chonologischer Reihenfolge:</h4>
       <div class="displayOrder">
         <h5>"Desmond Miles" Era</h5>
         <ul>
@@ -54,5 +89,6 @@
         </ul>
       </div>
     </div>
+    <div class="whiteText">
   </body>
 </html>
