--- a/startseite.html
+++ b/startseite.html
@@ -11,13 +11,13 @@
       <div>
         <a class="headerTextHier">Get the Order</a>
         <a class="whiteText"> ist deine Anlaufstelle für die optimale Reihenfolge von </a>
-        <a href="html/filme.html" class="headerTextHier">Filmen</a>
+        <a href="html/filme.html" target="_blank" class="headerTextHier">Filmen</a>
         <a class="whiteText">, </a>
-        <a href="html/animes.html" class="headerTextHier">Mangas</a>
+        <a href="html/animes.html" target="_blank" class="headerTextHier">Mangas</a>
         <a class="whiteText">, </a>
-        <a class="headerTextHier">Videospielen</a>
+        <a href="html/videospiele.html" target="_blank" class="headerTextHier">Videospielen</a>
         <a class="whiteText"> und </a>
-        <a href="html/animes.html" class="headerTextHier">Animes</a>
+        <a href="html/animes.html" target="_blank" class="headerTextHier">Animes</a>
         <a class="whiteText">.</a>
       </div>
       <a class="whiteText">Unsere kuratierte Sammlung bietet detaillierte Anleitungen und Empfehlungen, damit du jedes Werk in der perfekten Abfolge erleben kannst.</a>
@@ -28,15 +28,15 @@
     <div id="container">
       <fieldset>
         <img class="containerImage" alt="Pokemon Arena Bild" src="https://www.pokemon.com/static-assets/content-assets/cms2/img/watch-pokemon-tv/seasons/season15/season15_ep23_ss01.jpg">
-        <a href="html/videospiele.html">Videospiele</a>
+        <a href="html/videospiele.html" target="_blank">Videospiele</a>
       </fieldset>
       <fieldset>
         <img alt="bild2">
-        <a href="html/animes.html">Animes und Mangas</a>
+        <a href="html/animes.html" target="_blank">Animes und Mangas</a>
       </fieldset>
       <fieldset>
         <img alt="Spiderman" src="https://images.unsplash.com/photo-1635805737707-575885ab0820?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c3BpZGVybWFufGVufDB8fDB8fHww">
-        <a href="html/filme.html">Filme</a>
+        <a href="html/filme.html" target="_blank">Filme</a>
       </fieldset>
     </div>
     <footer>
