--- a/startseite.html
+++ b/startseite.html
@@ -35,7 +35,7 @@
         <a href="html/animes.html" target="_blank">Animes und Mangas</a>
       </fieldset>
       <fieldset>
-        <img alt="Spiderman" src="https://images.unsplash.com/photo-1635805737707-575885ab0820?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c3BpZGVybWFufGVufDB8fDB8fHww">
+        <img class="containerImage" alt="Spiderman" src="https://images.unsplash.com/photo-1635805737707-575885ab0820?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c3BpZGVybWFufGVufDB8fDB8fHww">
         <a href="html/filme.html" target="_blank">Filme</a>
       </fieldset>
     </div>
