--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -62,31 +62,55 @@
       <div class="displayOrder">
         <h5>(431 B.C.– 422 B.C.)</h5>
         <ul>
-          <li>Assassin’s Creed (2007)</li>
-          <li>Assassin’s Creed II (2009)</li>
-          <li>Assassin’s Creed: Brotherhood (2010)</li>
-          <li>Assassin’s Creed: Revelations (2011)</li>
-          <li>Assassin’s Creed III (2012)</li>
+          <li>Assassin's Creed Odyssey</li>
         </ul>
-        <h5>“Noob” Era</h5>
+        <h5>(49 B.C.–44 B.C.)</h5>
         <ul>
-          <li>Assassin’s Creed IV: Black Flag (2013)</li>
+          <li>Assassin's Creed Origins</li>
         </ul>
-        <h5>“Numbskull” Era</h5>
+        <h5>(861–???)</h5>
         <ul>
-          <li>Assassin’s Creed Rogue (2014)</li>
+          <li>Assassin's Creed Mirage</li>
         </ul>
-        <h5>“The Initiate” Era</h5>
+        <h5>(872–878)</h5>
         <ul>
-          <li>Assassin’s Creed Unity (2014)</li>
-          <li>Assassin’s Creed Syndicate (2015)</li>
+          <li>Assassin's Creed Valhalla</li>
         </ul>
-        <h5>Layla Hassan / Basim Ibn Ishaq Era</h5>
+        <h5>(1191)</h5>
         <ul>
-          <li>Assassin’s Creed Origins (2017)</li>
-          <li>Assassin’s Creed Odyssey (2018)</li>
-          <li>Assassin’s Creed Valhalla (2020)</li>
-          <li>Assassin’s Creed Mirage (2023)</li>
+          <li>Assassin's Creed</li>
+        </ul>
+        <h5>(1476–1499)</h5>
+        <ul>
+          <li>Assassin's Creed II </li>
+        </ul>
+        <h5>(1499–1507)</h5>
+        <ul>
+          <li>Assassin's Creed: Brotherhood</li>
+        </ul>
+        <h5>(1511–1512)</h5>
+        <ul>
+          <li>Assassin's Creed: Revelations</li>
+        </ul>
+        <h5>(1715–1722)</h5>
+        <ul>
+          <li>Assassin's Creed IV: Black Flag</li>
+        </ul>
+        <h5>(1752–1760)</h5>
+        <ul>
+          <li>Assassin's Creed Rogue</li>
+        </ul>
+        <h5>(1754–1783)</h5>
+        <ul>
+          <li>Assassin's Creed III</li>
+        </ul>
+        <h5>(1789–1794)</h5>
+        <ul>
+          <li>Assassins Creed Unity</li>
+        </ul>
+        <h5>(1868)</h5>
+        <ul>
+          <li>Assassin's Creed Syndicate</li>
         </ul>
       </div>
     </div>
