--- a/html/videospiele.html
+++ b/html/videospiele.html
@@ -17,8 +17,8 @@
     </header>
     <h3 class="whiteText">Inhaltsangabe</h3>
     <ul class="whiteText">
-      <li><a href="#ACRel" class="whiteText">Assassins Creed</a></li>
-      <li><a href="#ACChr" class="whiteText">Assassins Creed</a></li>
+      <li><a href="#ACRel" class="whiteText">Assassins Creed Release Reihenfolge</a></li>
+      <li><a href="#ACChr" class="whiteText">Assassins Creed chronologische Reihenfolge</a></li>
     </ul>
     <div class="whiteText">
       <h3>Videospiele</h3>
