--- a/startseite.html
+++ b/startseite.html
@@ -40,7 +40,7 @@
       </fieldset>
     </div>
     <footer>
-      <a class="whiteText">Hallo! Was geht ab?</a>
+      <h3>Impressum</h3>
     </footer>
   </body>
 </html>
