--- a/startseite.html
+++ b/startseite.html
@@ -40,7 +40,20 @@
       </fieldset>
     </div>
     <footer>
-      <h3>Impressum</h3>
+      <h3><p>Firma:</p>
+        <p>Ben's Movie Guide GmbH</p>
+        <p>Musterstraße 1</p>
+        <p>12345 Filmstadt</p>
+        <p>Kontakt:</p>
+        
+        <p>Telefon: 01234/56789</p>
+        <p>E-Mail: info@bensmovieguide.de</p>
+        <p>Geschäftsführer: Ben Mustermann</p>
+        <p>Ansprechpartner: Alex</p>
+        <p>Handelsregister: HRB 12345</p>
+        <p>Umsatzsteuer-ID: DE123456789</p>
+        <p>Haftungsausschluss:</p>
+        <p>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen.</p></h3>
     </footer>
   </body>
 </html>
