--- a/startseite.html
+++ b/startseite.html
@@ -28,15 +28,15 @@
     <div id="container">
       <fieldset>
         <img class="containerImage" alt="Pokemon Arena Bild" src="https://www.pokemon.com/static-assets/content-assets/cms2/img/watch-pokemon-tv/seasons/season15/season15_ep23_ss01.jpg">
-        <a href="html/videospiele.html" target="_blank">Videospiele</a>
+        <a href="html/videospiele.html" target="_blank" class="headerTextHier">Videospiele</a>
       </fieldset>
       <fieldset>
         <img alt="bild2">
-        <a href="html/animes.html" target="_blank">Animes und Mangas</a>
+        <a href="html/animes.html" target="_blank" class="headerTextHier">Animes und Mangas</a>
       </fieldset>
       <fieldset>
         <img class="containerImage" alt="Spiderman" src="https://images.unsplash.com/photo-1635805737707-575885ab0820?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c3BpZGVybWFufGVufDB8fDB8fHww">
-        <a href="html/filme.html" target="_blank">Filme</a>
+        <a href="html/filme.html" target="_blank" class="headerTextHier">Filme</a>
       </fieldset>
     </div>
     <footer>
